Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129427

Focus frame causes items in a RowLayout to change position when focus navigating

XMLWordPrintable

    • All
    • 7817f81fa (dev), 235867b1c (6.8), 81ddd5d47 (tqtc/lts-6.5)

      When tab focusing through items in a RowLayout and the focus frame moves from one item to another, in and out of the layout, the position of the items in the layout changes. Reproducible with the FluentWinUI3 style and the native style.

      Steps to reproduce:

      1) Run the gallery example with the FluentWinUI3 style

      2) Tab focus from the items in the toolbar to the items in the page (eg: in ButtonPage)

      Video attached.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            smd Jan Arve
            dorisverria Doris Verria
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes